--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ html {
 
 body {
     background-color: var(--dark1);
+    word-wrap: break-word;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 button, input, textarea {
@@ -40,6 +44,11 @@ button, input, textarea {
 
 button {
     cursor: pointer;
+    transition: 200ms ease-in-out;
+}
+
+button:active {
+    transform: scale(0.9);
 }
 
 input::placeholder, textarea::placeholder {
@@ -64,9 +73,28 @@ header {
     gap: 2rem;
 }
 
+.add-book-btn {
+    font-size: 16px;
+    font-weight: 600;
+    background-color: var(--dark1);
+    border-radius: var(--border-radius);
+    min-height: 2.5rem;
+    padding: 0.5rem;
+}
+
+.add-book-btn:hover {
+    box-shadow:
+        inset 0px 0px 10px 0px var(--purple),
+        0px 0px 10px 0px var(--purple);
+}
+
+main {
+    flex-grow: 1;
+}
+
 .book-container {
-    max-width: 1200px;
     margin: 0 auto;
+    max-width: 1200px;
     padding: 2rem;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -83,14 +111,13 @@ header {
     align-items: center;
     gap: 0.5rem;
 
-    max-height: fit-content;
-
     box-shadow: 0px 0px 5px 0px #000000;
 }
 
 .card-head-group {
+    max-width: 100%;
     display: grid;
-    grid-template: 1fr auto auto / 1fr 1fr;
+    grid-template: auto auto / 1fr 1fr;
     row-gap: 0.5rem;
     column-gap: 1rem;
 }
@@ -98,11 +125,12 @@ header {
 .card-title {
     font-size: 16px;
     grid-column: 1 / -1;
-    justify-self: center;
+    text-align: center;
 }
 
 .card-author, .card-page-count {
     font-size: 10px;
+    word-break: break-all;
     color: var(--light-purple);
 }
 
@@ -119,8 +147,12 @@ header {
     padding: 0.25rem;
     font-weight: 600;
     font-size: 12px;
-    min-width: 100px;
+    min-width: 60%;
     grid-column: 1 / -1;
+}
+
+.card-read-btn:hover {
+    transform: scale(0.98);
 }
 
 .btn-valid {
@@ -141,9 +173,16 @@ header {
     font-weight: 600;
     font-size: 12px;
     min-width: 60%;
+}
+
+.card-remove-btn:hover {
     box-shadow:
-        inset 0px 0px 4px 0px var(--invalid),
-        0px 0px 4px 0px var(--invalid);
+        inset 0px 0px 4px 0px var(--light-purple),
+        0px 0px 4px 0px var(--light-purple);
+}
+
+.card-remove-btn:active {
+    transform: none;
 }
 
 .card-sep {
@@ -154,14 +193,22 @@ header {
 
 .footer {
     background-color: var(--dark2);
-    position: absolute;
-    bottom: 0;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 8px;
     padding: 1rem;
+}
+
+.footer-text {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.fa-github {
+    color: var(--white);
+    font-size: 24px;
 }
 
 form {
@@ -173,6 +220,17 @@ form {
 
 .form-title {
     font-size: 24px;
+}
+
+.error {
+    display: none;
+    color: var(--invalid);
+    font-size: 12px;
+    font-weight: 500;
+}
+
+.error.active {
+    display: block;
 }
 
 .is-read {
@@ -193,13 +251,10 @@ form {
     min-width: 150px;
 }
 
-.add-book-btn {
-    font-size: 16px;
-    font-weight: 600;
-    background-color: var(--dark1);
-    border-radius: var(--border-radius);
-    min-height: 2.5rem;
-    padding: 0.5rem;
+.submit-btn:hover {
+    box-shadow:
+        inset 0px 0px 5px 0px var(--purple),
+        0px 0px 5px 0px var(--purple);
 }
 
 .modal {
